# alice

./: .dockerignore  .gitignore  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  package.nix  shell.nix
examples/: claude-proxy.toml  credentials.toml  gcp-test.toml  gcp.toml
examples/policies/: httpbin.toml
scripts/: test-docker.sh
src/: config.rs  credentials.rs  main.rs  telemetry.rs
src/proxy/: certs.rs  dns.rs  gcp.rs  h2.rs  http.rs  llm.rs  logging.rs  metrics.rs  mod.rs  policy.rs  prom.rs  request.rs  reverse.rs  tls.rs
src/proxy/transform/: injection_scan.rs  message_swap.rs  mod.rs  system_prompt.rs  tool_filter.rs
tests/: cloudflare.rs  integration.rs  performance.rs
tests/common/: mod.rs
