[package]
name = "alice"
version = "0.1.0"
edition = "2021"
description = "A sanitizing HTTPS proxy for controlled network access"
license = "MIT"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/TLS
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
h2 = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
webpki-roots = "0.26"

# DNS
hickory-resolver = "0.24"

# Config & CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Patterns
globset = "0.4"
ipnet = "2"
regex = "1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenTelemetry
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.32"

# Error handling
thiserror = "1"
anyhow = "1"

# Metrics
prometheus = "0.13"

# JWT / GCP auth
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

# Compression
flate2 = "1"

# Misc
time = "0.3"
base64 = "0.22"
secrecy = "0.10"
chrono = "0.4"
serde_json = "1"

[features]
default = []

[dev-dependencies]
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
pem = "3"
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "stream"] }
tempfile = "3"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

# Re-export rustls with ring feature for tests (crypto provider)
[dev-dependencies.rustls]
version = "0.23"
features = ["ring"]
